test/bad/type_err3.prg
// FAILS: type_err3.prg:2:13: Type error: expected `int', got `string'.
for (i : 3.."foobar") // here: ("foobar")
{
}
